--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
-url_nwea=
-username_nwea=
-password_nwea=
-environment=
-browser=
+url_nwea=https://sso.mapnwea.org/auth/login?dest=https%3A%2F%2Fteach.mapnwea.org%2Fadmin%2F
+username_nwea=fakeuser
+password_nwea=fakepass
+environment=qa
+browser=chrome
